<resources>
    <string name="app_name">nontondotkom</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui
        film yang sedang tampil</string>
    <string name="pre_sale">Pre-Sale</string>
    <string name="pre_sale_desc">Tidak khawaitr ketinggalan
        update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk
    transaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
    <string name="daftar_akun">Daftar Akun Baru</string>
    <string name="msk_akun">Masuk Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_balance">Total Balance</string>
    <string name="home">Home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="happy_watch">Happy Watch</string>
    <string name="sign_out">Sign Out</string>
</resources>
